--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   "author": "Remy Patgher & Lisette Melo & Jose Manuel Zumaya & Diego Valencia",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.9.7",
     "nodemon": "^3.1.0"
   }
 }
