Consumir API desde frontend

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "Remy Patgher & Lisette Melo & Jose Manuel Zumaya & Diego Valencia",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
